force-app/main/default/objects/Competitor__c/fields/Acqusition_Stage__c.field-meta.xml
<CustomField>
    <fullName>Acqusition_Stage__c</fullName>
    <label>Acquisition Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>