force-app/main/default/objects/Competitor__c/fields/Cancellation_Email__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Email__c</fullName>
    <label>Cancellation Email</label>
    <type>Email</type>
</CustomField>