force-app/main/default/objects/Competitor__c/fields/Cardboard_Sticker__c.field-meta.xml
<CustomField>
    <fullName>Cardboard_Sticker__c</fullName>
    <label>Cardboard Sticker</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>