force-app/main/default/objects/Competitor__c/fields/General_Waste_1100L__c.field-meta.xml
<CustomField>
    <fullName>General_Waste_1100L__c</fullName>
    <label>General Waste 1100L</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>