force-app/main/default/objects/Competitor__c/fields/General_Waste_Sack__c.field-meta.xml
<CustomField>
    <fullName>General_Waste_Sack__c</fullName>
    <label>General Waste Sack</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>