force-app/main/default/objects/Competitor__c/fields/How_to_terminate__c.field-meta.xml
<CustomField>
    <fullName>How_to_terminate__c</fullName>
    <label>How to terminate</label>
    <type>TextArea</type>
</CustomField>