force-app/main/default/objects/Competitor__c/fields/Mixed_Recycling_1100L__c.field-meta.xml
<CustomField>
    <fullName>Mixed_Recycling_1100L__c</fullName>
    <label>Mixed Recycling 1100L</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>