force-app/main/default/objects/Competitor__c/fields/Mixed_Recycling_Sack__c.field-meta.xml
<CustomField>
    <fullName>Mixed_Recycling_Sack__c</fullName>
    <label>Mixed Recycling Sack</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>