force-app/main/default/objects/Competitor__c/fields/Notes_and_History__c.field-meta.xml
<CustomField>
    <fullName>Notes_and_History__c</fullName>
    <label>Notes and History</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>