force-app/main/default/objects/Competitor__c/fields/Recycling_rate__c.field-meta.xml
<CustomField>
    <fullName>Recycling_rate__c</fullName>
    <label>Recycling rate</label>
    <length>100</length>
    <type>Text</type>
</CustomField>