force-app/main/default/objects/Competitor__c/fields/Services_available__c.field-meta.xml
<CustomField>
    <fullName>Services_available__c</fullName>
    <label>Services</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mixed Recycling</fullName>
            </value>
            <value>
                <fullName>General Waste</fullName>
            </value>
            <value>
                <fullName>Cardboard</fullName>
            </value>
            <value>
                <fullName>Food Recycling</fullName>
            </value>
            <value>
                <fullName>Paper Shredding</fullName>
            </value>
            <value>
                <fullName>WEEE</fullName>
            </value>
            <value>
                <fullName>Toner Cartridges</fullName>
            </value>
            <value>
                <fullName>Batteries</fullName>
            </value>
            <value>
                <fullName>Textiles</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>