force-app/main/default/objects/Competitor__c/fields/Services_Offered__c.field-meta.xml
<CustomField>
    <fullName>Services_Offered__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Recycling/Waste Company</fullName>
            </value>
            <value>
                <fullName>Specialist Recycling Company</fullName>
            </value>
            <value>
                <fullName>Broker</fullName>
            </value>
            <value>
                <fullName>Local Council</fullName>
            </value>
            <value>
                <fullName>Cleaning Company</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>