force-app/main/default/objects/Competitor__c/fields/Turnover__c.field-meta.xml
<CustomField>
    <fullName>Turnover__c</fullName>
    <description>Estimate turnover that is waste/recycling services.</description>
    <label>Estimate Turnover</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>