force-app/main/default/objects/Competitor__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Services_Offered__c</columns>
    <columns>General_Waste_Sack__c</columns>
    <columns>Mixed_Recycling_Sack__c</columns>
    <columns>Cardboard_Sticker__c</columns>
    <columns>General_Waste_1100L__c</columns>
    <columns>Mixed_Recycling_1100L__c</columns>
    <columns>Cancellation_Email__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Rating__c</field>
        <operation>greaterThan</operation>
        <value>3</value>
    </filters>
    <label>All Competitors</label>
</ListView>